<resources>
    <string name="app_name">AndroidEx1</string>
    <string name="currentOS_txt">OS Version:</string>
    <string name="currentOS_value">0</string>
    <string name="btn_analyze">Analyze</string>
    <string name="parameter_txt">Parameter</string>
    <string name="value_txt">Value</string>
    <string name="score_txt">Score</string>
    <string name="deviceSecure_txt">Device Lock</string>
    <string name="deviceSecure_value">0</string>
    <string name="deviceSecure_score">-1</string>
    <string name="currentOS_score">-1</string>
    <string name="hit_button_to_evalute">Hit button to evalute</string>
    <string name="securityPatch_txt">Security Patch</string>
    <string name="securityPatch_Val">0</string>
    <string name="securityPatch_Score">-1</string>
    <string name="screenTimeout_txt">Screen Timeout</string>
    <string name="screenTimeout_Val">0</string>
    <string name="screenTimeout_Score">-1</string>
    <string name="within_3_months">&lt;3mos</string>
</resources>
